cmake_minimum_required(VERSION 3.10)

project(iLab-tree)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "-Wall -Werror -g")

set(SRC main.cpp)

add_executable(tree ${SRC})
set(RELEASE_ADDITION_OPTIONS -O2)
target_compile_options(tree PRIVATE ${RELEASE_ADDITION_OPTIONS})
target_link_options(tree PRIVATE ${RELEASE_ADDITION_OPTIONS})
target_compile_definitions(tree PRIVATE NDEBUG)
target_compile_definitions(tree PRIVATE UI)

add_executable(stress-tester ${SRC})
set(TESTER_ADDITION_OPTIONS -O0 -fsanitize=leak,address,undefined)
target_compile_options(stress-tester PRIVATE ${TESTER_ADDITION_OPTIONS})
target_link_options(stress-tester PRIVATE ${TESTER_ADDITION_OPTIONS})
target_compile_definitions(stress-tester PRIVATE STRESS)

add_executable(tester ${SRC})
set(TESTER_ADDITION_OPTIONS -O0 -fsanitize=leak,address,undefined)
target_compile_options(tester PRIVATE ${TESTER_ADDITION_OPTIONS})
target_link_options(tester PRIVATE ${TESTER_ADDITION_OPTIONS})
target_compile_definitions(tester PRIVATE E2ETESTER)

macro(make_e2e_test number)
    add_test(NAME "test_${number}" COMMAND ${BASH_PROGRAM} -c "./tester < ${CMAKE_CURRENT_SOURCE_DIR}/t/${number}.dat")
endmacro()

find_program(BASH_PROGRAM bash)
enable_testing()
if(BASH_PROGRAM)
    make_e2e_test(01)
    make_e2e_test(02)
    make_e2e_test(03)
    make_e2e_test(04)
    make_e2e_test(05)
    make_e2e_test(06)
    make_e2e_test(07)
    make_e2e_test(08)
    make_e2e_test(09)
    make_e2e_test(10)
endif(BASH_PROGRAM)
